@@ -2,7 +2,7 @@
  * %kadu copyright begin%
  * Copyright 2008, 2009, 2010, 2011 Piotr Galiszewski (piotr.galiszewski@kadu.im)
  * Copyright 2010 Wojciech Treter (juzefwt@gmail.com)
- * Copyright 2011 Piotr Dąbrowski (ultr@ultr.pl)
+ * Copyright 2011, 2012 Piotr Dąbrowski (ultr@ultr.pl)
  * Copyright 2009 Bartłomiej Zimoń (uzi18@o2.pl)
  * Copyright 2004 Adrian Smarzewski (adrian@kadu.net)
  * Copyright 2007, 2008, 2009, 2009, 2010, 2011 Rafał Malinowski (rafal.przemyslaw.malinowski@gmail.com)
@@ -26,6 +26,7 @@
 
 #include <QtCore/QTimer>
 #include <QtGui/QMenu>
+#include <QtGui/QTextDocument>
 
 #include "accounts/account-manager.h"
 #include "accounts/account.h"
@@ -66,11 +67,12 @@ void StatusButton::createGui()
 
 void StatusButton::updateStatus()
 {
+	QString tooltip("<table>");
+
 	if (DisplayStatusName)
 	{
 		setToolButtonStyle(Qt::ToolButtonTextBesideIcon);
 		setText(MyStatusContainer->status().displayName());
-		setToolTip(QString());
 	}
 	else
 	{
@@ -78,15 +80,30 @@ void StatusButton::updateStatus()
 		{
 			setToolButtonStyle(Qt::ToolButtonTextBesideIcon);
 			setText(MyStatusContainer->statusContainerName());
-			setToolTip(QString());
+			tooltip +=
+				QString("<tr><td align='right' style='font-weight:bold; white-space:nowrap;'>%1:</td><td style='white-space:nowrap;'>%2</td></tr>")
+					.arg(tr("Identity"), MyStatusContainer->statusContainerName());
 		}
 		else
 		{
 			setToolButtonStyle(Qt::ToolButtonIconOnly);
 			setText(QString());
-			setToolTip(MyStatusContainer->statusContainerName());
+			tooltip +=
+				QString("<tr><td align='right' style='font-weight:bold; white-space:nowrap;'>%1:</td><td style='white-space:nowrap;'>%2</td></tr>")
+					.arg(tr("Account"), MyStatusContainer->statusContainerName());
 		}
 	}
+
+	tooltip +=
+		QString("<tr><td align='right' style='font-weight:bold; white-space:nowrap;'>%1:</td><td style='white-space:nowrap;'>%2</td></tr>")
+			.arg(tr("Status"), MyStatusContainer->status().displayName());
+	tooltip
+		+= QString("<tr><td align='right' style='font-weight:bold; white-space:nowrap;'>%1:</td><td>%2</td></tr>")
+			.arg(tr("Description"), prepareDescription(MyStatusContainer->status().description()));
+
+	tooltip += QString("</table>");
+
+	setToolTip(tooltip);
 }
 
 void StatusButton::statusUpdated()
@@ -111,4 +128,16 @@ void StatusButton::setDisplayStatusName(bool displayStatusName)
 void StatusButton::iconUpdated(const KaduIcon &icon)
 {
 	setIcon(icon.icon());
+}
+
+QString StatusButton::prepareDescription(const QString &description) const
+{
+	QColor color = palette().windowText().color();
+	color.setAlpha(128);
+	QString colorString = QString("rgba(%1,%2,%3,%4)").arg(color.red()).arg(color.green()).arg(color.blue()).arg(color.alpha());
+
+	QString html = Qt::escape(description);
+	html.replace('\n', QString::fromUtf8("<span style='color:%1;'> \u21B5</span><br />").arg(colorString));
+
+	return html;
 }
